--- a/vision.html
+++ b/vision.html
@@ -23,7 +23,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="vision_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="vision.hyperesources/vision_hype_generated_script.js?68907"></script>
+		<script type="text/javascript" charset="utf-8" src="vision.hyperesources/vision_hype_generated_script.js?35375"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,6 +35,8 @@
 	<div style="display:none" aria-hidden=true>
 
 		<div></div>
+		<div>Посмотреть видение
+</div>
 
 	</div>
 
