--- a/infographics/any3on1.html
+++ b/infographics/any3on1.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="any3on1_hype_container" style="margin:auto;position:relative;width:100px;height:50px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="any3on1.hyperesources/any3on1_hype_generated_script.js?90152"></script>
+		<script type="text/javascript" charset="utf-8" src="any3on1.hyperesources/any3on1_hype_generated_script.js?91312"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,7 +35,8 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>🛫🛫🛫</div>
+		<div>😐</div>
+		<div>🛫</div>
 
 	</div>
 
