--- a/logo.html
+++ b/logo.html
@@ -16,15 +16,15 @@
 	</style>
 	<!-- copy these lines to your document head: -->
 
-	<meta name="viewport" content="user-scalable=yes, width=600" />
+	<meta name="viewport" content="user-scalable=yes, initial-scale=1.0, width=320" />
 
 	<!-- end copy -->
   </head>
   <body>
 	<!-- copy these lines to your document: -->
 
-	<div id="logo_hype_container" style="margin:auto;position:relative;width:600px;height:400px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="logo.hyperesources/logo_hype_generated_script.js?1872"></script>
+	<div id="logo_hype_container" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="logo.hyperesources/logo_hype_generated_script.js?57140"></script>
 	</div>
 
 	<!-- end copy -->
