--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="work_hype_container" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="work.hyperesources/work_hype_generated_script.js?99657"></script>
+		<script type="text/javascript" charset="utf-8" src="work.hyperesources/work_hype_generated_script.js?86228"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,7 +35,13 @@
 
 	<div style="display:none" aria-hidden=true>
 
+		<div>Среди причин, которые заставляют омичей покидать родной город, чаще всего называют невозможность найти работу, невозможность самореализации[if !supportFootnotes][1]
+
+[1] http://superomsk.ru/news/55141-omichi_jaluyutsya_na_beznadejnuyu_nexvatku_rabochi/
+EndFragment</div>
 		<div>Город проигрывает всем своим конкурентам по индексу развития новой экономики[if !supportFootnotes][8][endif][8][endif] https://www.pwc.ru/ru/assets/cci-2017.pdfEndFragment</div>
+		<div>НЕВОЗМОЖНОСТЬ САМОРЕАЛИЗАЦИИ
+EndFragment</div>
 		<div>Около трети работоспособного населения не находит достойную работу в Омске и зарабатывает вахтовым методом[if !supportFootnotes][9]
 [if !supportFootnotes][9][endif] https://www.om1.ru/bank/news/122525/[if gte mso 9]><xml>
  <o:OfficeDocumentSettings>
