--- a/logo.html
+++ b/logo.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="logo_hype_container" style="margin:auto;position:relative;width:320px;height:568px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="logo.hyperesources/logo_hype_generated_script.js?57140"></script>
+		<script type="text/javascript" charset="utf-8" src="logo.hyperesources/logo_hype_generated_script.js?6080"></script>
 	</div>
 
 	<!-- end copy -->
@@ -36,6 +36,10 @@
 	<div style="display:none" aria-hidden=true>
 
 		<div></div>
+		<div>Войти на сайт
+</div>
+		<div>Скачать PDF
+</div>
 
 	</div>
 
