--- a/vision.html
+++ b/vision.html
@@ -18,7 +18,7 @@
 	position:absolute;
 	margin:auto;
 	left:0;right:0;
-	top:0;bottom:0;
+	bottom:0;
   }
 </style>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
