--- a/vision.html
+++ b/vision.html
@@ -18,7 +18,7 @@
 	position:absolute;
 	margin:auto;
 	left:0;right:0;
-	bottom:0;
+	top:0;bottom:0;
   }
 </style>
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
@@ -103,9 +103,9 @@ function handleComplete(evt,comp) {
 <!-- write your code here -->
 </head>
 <body onload="init();" style="margin:0px;">
-	<div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00); width:1024px; height:470px">
-		<canvas id="canvas" width="1024" height="470" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
-		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:1024px; height:470px; position: absolute; left: 0px; top: 0px; display: block;">
+	<div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00); width:1024px; height:475px">
+		<canvas id="canvas" width="1024" height="475" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
+		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:1024px; height:475px; position: absolute; left: 0px; top: 0px; display: block;">
 		</div>
 	</div>
 </body>
