--- a/vision.html
+++ b/vision.html
@@ -23,7 +23,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="vision_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="vision.hyperesources/vision_hype_generated_script.js?11489"></script>
+		<script type="text/javascript" charset="utf-8" src="vision.hyperesources/vision_hype_generated_script.js?24515"></script>
 	</div>
 
 	<!-- end copy -->
@@ -8432,9 +8432,14 @@
 </div>
 		<div>skip
 </div>
-		<div></div>
-		<div>Посмотреть видение
+		<div>За свою историю Омск чем только не был:
+и крепостью, и местом ссылки, и заводом,
+и военным закрытым городом.
+Все это время Омск существовал не для людей.
+Чтобы изменить ситуацию, нужно изменить смысл города – Омск должен стать домом для миллиона человек.
 </div>
+		<div></div>
+		<div>ДОБРО ПОЖАЛОВАТЬ ДОМОЙ!</div>
 		<div>[if gte mso 9]><xml>
  <w:WordDocument>
   <w:View>Normal</w:View>
@@ -30927,9 +30932,9 @@
 		<div></div>
 		<div>ЦЕННОСТИ ВАЖНЕЕ ЦЕЛЕЙ!
 </div>
+		<div>Вернуться к проекту</div>
 		<div>Ценности
 </div>
-		<div>Вернуться к проекту</div>
 		<div>Каждый горожанин может отметить для себя положительные качества Омска, его сильные стороны – то, что заставляет нас верить в свой город; то, что может стать основой положительных перемен.Это и есть городские ценности. Всего, в результате встреч, проектных сессий, обсуждений, исследований и опросов сформулировано десять общегородских ценностей. В десяти абзацах сконцентрированы мысли, идеи, размышления сотен омичей, экспертов, активных жителей, предпринимателей.
 
 Предлагаем вам познакомиться с ними. EndFragment</div>
@@ -32224,6 +32229,7 @@
 Где, если не в Омске, восстанавливать силы, черпать вдохновение для творчества, прятаться от беспокойства и суеты?</div>
 		<div>СПОКОЙСТВИЕ И РАЗМЕРЕННОСТЬ
 </div>
+		<div></div>
 		<div></div>
 		<div></div>
 		<div></div>
