--- a/vision.hyperesources/iframe-htmlwidget-11.html
+++ b/vision.hyperesources/iframe-htmlwidget-11.html
@@ -1,1 +1,1 @@
-<iframe src="https://vk.com/video_ext.php?oid=447054709&id=456239017&hash=e5e01d90db02a522" width="500" height="280" frameborder="0" allowfullscreen></iframe>
+<iframe width="500" height="280" src="https://www.youtube.com/embed/5n22-EjPFSI?start=4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
